Note about content filters

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -36,6 +36,12 @@ The [guimenu]``name`` field only accepts lowercase letters, numbers, periods (``
 . Continue creating environments until you have all the  environments for your lifecycle completed.
 You can select the order of the environments in the lifecycle by selecting an environment in the [guimenu]``Insert before`` field when you create it.
 
+[NOTE]
+.Content Filters
+===
+Content Filters are global in your organization and can be shared in multiple projects.
+===
+
 ////
 .Procedure: Using a Content Lifecycle Project
 
