Add section 'Using Content Project'

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -42,9 +42,48 @@ You can select the order of the environments in the lifecycle by selecting an en
 Content Filters are global in your organization and can be shared in multiple projects.
 ===
 
-////
 .Procedure: Using a Content Lifecycle Project
 
-. TBD ...
 
-////
+=== Building Content Project
+Once you create a project, define environments, attach sources (and
+possibly filters), you can built the project for the first time.
+
+Building applies filters to the attached sources and clones them to
+the first environment in the project.
+
+. In the {productname} {webui}, navigate to menu:Content Lifecycle[Content Lifecycle Projects], and select the project you wish to build
+. Review the attached sources and filters
+. Click btn:[Build]
+. Check the build progress in the [guimenu]``Environment Lifecycle`` section
+
+After the build is finished, the environment version is increased by
+one and the built sources (e.g. software channels) can be assigned to
+systems.
+
+=== Promoting Environment in Content Project
+When the project has been built, the built sources can be sequentially
+promoted to the environments.
+
+. In the project screen, scroll to the [guimenu]``Environment Lifecycle`` section
+. Find the environment you wish to promote to its successor
+. Click btn:[Promote]
+. Check the build progress in the [guimenu]``Environment Lifecycle`` section
+
+=== Assigning systems to Environment
+The built and promote actions produce a tree of software channels. In
+order to add the systems to the environment, assign the software
+channels (base and children) to your system via menu:Software[Software
+Channels] in the [guimenu]``System Details`` page for a system.
+
+[NOTE]
+.Current Limitation: Changing channel assignment after building or promoting
+===
+When the project is built with **adding** new sources, you need to
+revisit your channel assignments to systems as the newly added cloned
+channels are not assigned to systems automatically.
+
+The same goes for the promote operation.
+
+The automatic assignment is going to be addressed in future versions.
+===
