Note about adding an environment

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -42,6 +42,14 @@ You can select the order of the environments in the lifecycle by selecting an en
 Content Filters are global in your organization and can be shared in multiple projects.
 ===
 
+[NOTE]
+.Adding environment in existing project
+===
+When you add an environment to an existing project that has already
+some sources built, the newly added environment will be populated with
+the content of its predecessor environment.
+===
+
 .Procedure: Using a Content Lifecycle Project
 
 
