Minor alignments to the current state of the UI

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -17,10 +17,10 @@ Most environment lifecycles include at least test and production environments, b
 
 .Procedure: Creating a Content Lifecycle Project
 
-. In the {productname} {webui}, navigate to menu:Content Lifecycle Management[Content Lifecycle Projects], and click btn:[Create Project]
-. In the [guimenu]``label`` field, enter a label for your project.
-The [guimenu]``label`` field only accepts lowercase letters, numbers, periods (``.``), hyphens (``-``) and underscores (``_``).
-. In the [guimenu]``name`` field, enter a descriptive name for your project.
+. In the {productname} {webui}, navigate to menu:Content Lifecycle[Content Lifecycle Projects], and click btn:[Create Project]
+. In the [guimenu]``Label`` field, enter a label for your project.
+The [guimenu]``Label`` field only accepts lowercase letters, numbers, periods (``.``), hyphens (``-``) and underscores (``_``).
+. In the [guimenu]``Name`` field, enter a descriptive name for your project.
 . Click the btn:[Create] button to create your project and return to the project page.
 . Click btn:[Attach/Detach Sources].
 . In the [guimenu]``Sources`` dialog, select the source type, and select a base channel for your project.
@@ -30,9 +30,9 @@ The software channels you selected should now be showing.
 . Click btn:[Attach/Detach Filters].
 . In the [guimenu]``Filters`` dialog, select the filters you want to attach to the project.
 To create a new filter, click btn:[Create new Filter].
-. Click btn:[Add new Environment].
+. Click btn:[Add Environment].
 . In the [guimenu]``Environment Lifecycle`` dialog, give the first environment a name and a description, and click btn:[Save].
-The [guimenu]``name`` field only accepts lowercase letters, numbers, periods (``.``), hyphens (``-``) and underscores (``_``).
+The [guimenu]``Name`` field only accepts lowercase letters, numbers, periods (``.``), hyphens (``-``) and underscores (``_``).
 . Continue creating environments until you have all the  environments for your lifecycle completed.
 You can select the order of the environments in the lifecycle by selecting an environment in the [guimenu]``Insert before`` field when you create it.
 
