Collapse the wrapped lines into single lines

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -45,33 +45,26 @@ Content Filters are global in your organization and can be shared in multiple pr
 [NOTE]
 .Adding environment in existing project
 ====
-When you add an environment to an existing project that has already
-some sources built, the newly added environment will be populated with
-the content of its predecessor environment.
+When you add an environment to an existing project that has already some sources built, the newly added environment will be populated with the content of its predecessor environment.
 ====
 
 .Procedure: Using a Content Lifecycle Project
 
 
 === Building Content Project
-Once you create a project, define environments, attach sources (and
-possibly filters), you can built the project for the first time.
+Once you create a project, define environments, attach sources (and possibly filters), you can built the project for the first time.
 
-Building applies filters to the attached sources and clones them to
-the first environment in the project.
+Building applies filters to the attached sources and clones them to the first environment in the project.
 
 . In the {productname} {webui}, navigate to menu:Content Lifecycle[Content Lifecycle Projects], and select the project you wish to build
 . Review the attached sources and filters
 . Click btn:[Build]
 . Check the build progress in the [guimenu]``Environment Lifecycle`` section
 
-After the build is finished, the environment version is increased by
-one and the built sources (e.g. software channels) can be assigned to
-systems.
+After the build is finished, the environment version is increased by one and the built sources (e.g. software channels) can be assigned to systems.
 
 === Promoting Environment in Content Project
-When the project has been built, the built sources can be sequentially
-promoted to the environments.
+When the project has been built, the built sources can be sequentially promoted to the environments.
 
 . In the project screen, scroll to the [guimenu]``Environment Lifecycle`` section
 . Find the environment you wish to promote to its successor
@@ -79,17 +72,12 @@ promoted to the environments.
 . Check the build progress in the [guimenu]``Environment Lifecycle`` section
 
 === Assigning systems to Environment
-The built and promote actions produce a tree of software channels. In
-order to add the systems to the environment, assign the software
-channels (base and children) to your system via menu:Software[Software
-Channels] in the [guimenu]``System Details`` page for a system.
+The built and promote actions produce a tree of software channels. In order to add the systems to the environment, assign the software channels (base and children) to your system via menu:Software[Software Channels] in the [guimenu]``System Details`` page for a system.
 
 [NOTE]
 .Current Limitation: Changing channel assignment after building or promoting
 ====
-When the project is built with **adding** new sources, you need to
-revisit your channel assignments to systems as the newly added cloned
-channels are not assigned to systems automatically.
+When the project is built with **adding** new sources, you need to revisit your channel assignments to systems as the newly added cloned channels are not assigned to systems automatically.
 
 The same goes for the promote operation.
 
