fixed title sequence in retail guide, removed depreciated upgrade link for PDF

--- a/modules/retail/pages/retail-formula-branchnetwork.adoc
+++ b/modules/retail/pages/retail-formula-branchnetwork.adoc
@@ -8,7 +8,7 @@ The most common ways provide either a dedicated or shared LAN for terminals.
 
 
 
-=== Set up a branch server with a dedicated LAN
+== Set up a branch server with a dedicated LAN
 
 In this configuration, the branch server requires at least two network interfaces: one acts as a WAN to communicate with the {susemgr} server, and the other one acts as an isolated LAN to communicate with terminals.
 
@@ -33,7 +33,7 @@ This configuration allows for the branch server to provide DHCP, DNS, TFTP, PXE 
 
 
 
-=== Set up a branch server with a shared network
+== Set up a branch server with a shared network
 
 In this configuration, the branch server has only one network interface card, which is used to connect to the {susemgr} server as well as the terminals.
 
