--- a/modules/retail/pages/retail-formula-pxe.adoc
+++ b/modules/retail/pages/retail-formula-pxe.adoc
@@ -21,7 +21,7 @@ Use only alphanumeric characters for the branch identifier.
 
 
 [[retail.sect.formulas.pxe.kernelparams]]
-=== Kernel Command Line Parameters
+== Kernel Command Line Parameters
 Saltboot supports common kernel parameters and saltboot-specific kernel parameters.
 All the parameters can be entered in the [guimenu]``Kernel Command Line Parameters`` field of the PXE formula.
 
