--- a/modules/upgrade/nav-upgrade-guide.adoc
+++ b/modules/upgrade/nav-upgrade-guide.adoc
@@ -34,7 +34,7 @@ include::modules/upgrade/pages/upgrade-overview.adoc[leveloffset=+1]
 include::modules/upgrade/pages/server-upgrade.adoc[leveloffset=+1]
 
 // Migrate from 2x to 3x
-include::modules/upgrade/pages/migrate-2x-3x.adoc[leveloffset=+1]
+//include::modules/upgrade/pages/migrate-2x-3x.adoc[leveloffset=+1]
 
 // Migrate from 3x to 3x
 include::modules/upgrade/pages/migrate-3x-3x.adoc[leveloffset=+1]
