removed outdated retail-formulas link for building pdf book

--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -23,7 +23,7 @@ ifndef::backend-pdf[]
 // Admin
 ** xref:retail-admin.adoc[Administration]
 *** xref:retail-delta-images.adoc[Delta Images]
-*** xref:retail-ternminal-names.adoc[Terminal Names]
+*** xref:retail-terminal-names.adoc[Terminal Names]
 *** xref:retail-mass-config.adoc[Mass Configuration]
 // Retail Upgrade
 ** xref:retail-migration-intro.adoc[Retail Upgrade]
@@ -64,8 +64,7 @@ include::modules/retail/pages/retail-deploy-terminals.adoc[leveloffset=+3]
 // Admin
 include::modules/retail/pages/retail-admin.adoc[leveloffset=+2]
 
-include::modules/retail/pages/retail-formulas.adoc[leveloffset=+3]
-
+//include::modules/retail/pages/retail-formulas.adoc[leveloffset=+3]
 include::modules/retail/pages/retail-delta-images.adoc[leveloffset=+3]
 
 include::modules/retail/pages/retail-terminal-names.adoc[leveloffset=+3]
