--- a/modules/retail/pages/retail-admin.adoc
+++ b/modules/retail/pages/retail-admin.adoc
@@ -1,5 +1,5 @@
 [[retail-admin]]
 = Administration
 
-This sections contains notes on administering your {smr} installation.
+This section contains notes on administering your {smr} installation.
 For general administration tasks, see the {susemgr} documentation at https://www.suse.com/documentation/suse-manager/.
