--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -14,8 +14,9 @@ ifndef::backend-pdf[]
 ** xref:retail-admin.adoc[Administration]
 *** xref:retail-formulas.adoc[Formulas]
 *** xref:retail-delta-images.adoc[Delta Images]
-*** xref:retail-ternminal-names.adoc[Terminal Names]
+*** xref:retail-terminal-names.adoc[Terminal Names]
 *** xref:retail-mass-config.adoc[Mass Configuration]
+*** xref:retail-terminal-ratelimiting.adoc[Rate Limiting Terminals]
 // Retail Upgrade
 ** xref:retail-migration-intro.adoc[Retail Upgrade]
 *** xref:retail-prepare-migration.adoc[Prepare for Migration]
@@ -62,6 +63,8 @@ include::modules/retail/pages/retail-delta-images.adoc[leveloffset=+3]
 include::modules/retail/pages/retail-terminal-names.adoc[leveloffset=+3]
 
 include::modules/retail/pages/retail-mass-config.adoc[leveloffset=+3]
+
+include::modules/retail/pages/retail-terminal-ratelimiting.adoc[leveloffset=+3]
 
 // Retail Upgrade
 include::modules/retail/pages/retail-migration-intro.adoc[leveloffset=+1]
