--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -2,7 +2,7 @@
 = Monitoring with Prometheus
 
 Monitoring can be performed in {productname} using Prometheus and Grafana.
-The packages for Prometheus are shipped with SUSE Manager Client Tools, these packages include several Prometheus exporters.
+The packages for Prometheus are shipped with SUSE Manager Client Tools, these packages also include several Prometheus exporters.
 {productname} Server and Proxy are now able to provide self-health metrics, or install and manage a limited number of Prometheus exporters on managed client systems.
 
 Prometheus is a monitoring tool, originally built at SoundCloud, that is used to record real-time metrics in a time-series database.
