Port 8050 needs to be opened for graphical console display

--- a/modules/administration/pages/virtualization.adoc
+++ b/modules/administration/pages/virtualization.adoc
@@ -481,5 +481,6 @@ btn:[Confirm] the action on the displayed popup dialog.
 === Displaying {vmguest} graphical console
 
 In order to be able to display a {vmguest} VNC or Spice graphical console, the virtual host corresponding port needs to be reachable by the server.
+The server's 8050 port also needs to be reachable.
 The {vmguest} graphics settings also have to listen on at least the virtual host address.
 This is the default for any {vmguest} created using the web interface.
