--- a/modules/installation/pages/ports.adoc
+++ b/modules/installation/pages/ports.adoc
@@ -82,6 +82,11 @@ TCP
 
 For cobbler.
 
+8050::
+Inbound / TCP / websockify
+
+Needed to access graphical console of virtual machines from {productname} web interface.
+
 .Internally Used Ports on {productname} Server
 2828::
 Internal /
