Set up table structure

--- a/modules/client-configuration/pages/client-config-overview.adoc
+++ b/modules/client-configuration/pages/client-config-overview.adoc
@@ -6,3 +6,30 @@ Registering clients is the first step after installing {productname}, and most o
 {productname} is compatible with a range of client technologies: you can install traditional or Salt clients, running {sle} or another Linux operating system, with a range of hardware options.
 
 This guide discusses how to register and configure different clients, both manually and automatically.
+
+
+== Compare Traditional and Salt Clients
+
+This table lists the availability of various features for traditional and Salt clients.
+
+In this table, icon:check[role="green"] indicates that the feature is available, and icon:times[role="danger"] indicates that it is not available.
+Fields marked as icon:question[role="gray"] are under consideration, and may or may not be made available at a later date.
+
+[cols="1,1,1,1", options="header"]
+.Features of Traditional and Salt Clients
+|===
+| Feature | Notes | Traditional | Salt
+|         |       | icon:check[role="green"]      | icon:check[role="green"]
+|         |       | icon:check[role="green"]      | icon:check[role="green"]
+|         |       | icon:check[role="green"]      | icon:check[role="green"]
+|         |       | icon:check[role="green"]      | icon:check[role="green"]
+|         |       | icon:check[role="green"]      | icon:check[role="green"]
+|         |       | icon:question[role="gray"]    | icon:question[role="gray"]
+|         |       | icon:check[role="green"]      | icon:check[role="green"]
+|         |       | icon:check[role="green"]      | icon:check[role="green"]
+|         |       | icon:question[role="gray"]    | icon:question[role="gray"]
+|         |       | icon:question[role="gray"]    | icon:question[role="gray"]
+|         |       | icon:times[role="danger"]     | icon:check[role="green"]
+|         |       | icon:times[role="danger"]     | icon:check[role="green"]
+|         |       | icon:times[role="danger"]     | icon:check[role="green"]
+|=
