Initial table content

--- a/modules/client-configuration/pages/client-config-overview.adoc
+++ b/modules/client-configuration/pages/client-config-overview.adoc
@@ -18,18 +18,32 @@ Fields marked as icon:question[role="gray"] are under consideration, and may or 
 [cols="1,1,1,1", options="header"]
 .Features of Traditional and Salt Clients
 |===
-| Feature | Notes | Traditional | Salt
-|         |       | icon:check[role="green"]      | icon:check[role="green"]
-|         |       | icon:check[role="green"]      | icon:check[role="green"]
-|         |       | icon:check[role="green"]      | icon:check[role="green"]
-|         |       | icon:check[role="green"]      | icon:check[role="green"]
-|         |       | icon:check[role="green"]      | icon:check[role="green"]
-|         |       | icon:question[role="gray"]    | icon:question[role="gray"]
-|         |       | icon:check[role="green"]      | icon:check[role="green"]
-|         |       | icon:check[role="green"]      | icon:check[role="green"]
-|         |       | icon:question[role="gray"]    | icon:question[role="gray"]
-|         |       | icon:question[role="gray"]    | icon:question[role="gray"]
-|         |       | icon:times[role="danger"]     | icon:check[role="green"]
-|         |       | icon:times[role="danger"]     | icon:check[role="green"]
-|         |       | icon:times[role="danger"]     | icon:check[role="green"]
+| Feature               | Notes   | Traditional               |         Salt
+| Registration          |         | icon:check[role="green"]  | icon:check[role="green"]
+| Install Packages      |         | icon:check[role="green"]  | icon:check[role="green"]
+| Install Patches       |         | icon:check[role="green"]  | icon:check[role="green"]
+| Remote Commands       |         | icon:check[role="green"]  | icon:check[role="green"]
+| System Package States |         | icon:times[role="danger"] | icon:check[role="green"]
+| System Custom States  |         | icon:times[role="danger"] | icon:check[role="green"]
+| Group Custom States   |         | icon:times[role="danger"] | icon:check[role="green"]
+| Organization Custom States |    | icon:times[role="danger"] | icon:check[role="green"]
+| System Set Manager  |           | icon:check[role="green"]  | icon:check[role="green"]
+| Service Pack Migration |        | icon:check[role="green"]  | icon:check[role="green"]
+| Virtual Host Management | Bootstrap installation support | icon:check[role="green"] | icon:check[role="green"] (read-only)
+| System Redeployment | With Auto-installation | icon:check[role="green"] | icon:question[role="gray"]
+| Contact Methods | Between server and client | osad, rhnsd, ssh push | zeromq: Salt default salt-ssh
+| Red Hat Network Clients |       | icon:check[role="green"]  | icon:check[role="green"]
+| Ubuntu Clients      |           | icon:times[role="danger"] | icon:check[role="green"]
+| SUSE Manager Proxy  |           | icon:check[role="green"]  | icon:check[role="green"]
+| Action Chains       |           | icon:check[role="green"]  | icon:check[role="green"]
+| Software Crash Reporting |      | icon:check[role="green"]  | icon:times[role="danger"]
+| Staging             |           | icon:check[role="green"]  | icon:check[role="green"]
+| Duplicate Package Reporting | Example: Multiple Versions of the Linux Kernel | icon:check[role="green"] | icon:check[role="green"]
+| SCAP Auditing       |           | icon:check[role="green"]  | icon:check[role="green"]
+| Support for Multiple Organizations | | icon:check[role="green"] | icon:check[role="green"]
+| Package Verification |          | icon:check[role="green"]  | icon:question[role="gray"]
+| System Locking       |          | icon:check[role="green"]  | icon:question[role="gray"]
+| Configuration File Management | | icon:check[role="green"]  | icon:check[role="green"]
+| Snapshots and Profiles |        | icon:check[role="green"]  | icon:question[role="gray"] (Profiles are supported, sync is not)
+| Power Management     |          | icon:check[role="green"]  | icon:question[role="gray"]
 |=
