remove traditional ref

--- a/modules/client-configuration/pages/autoinstallation-methods.adoc
+++ b/modules/client-configuration/pages/autoinstallation-methods.adoc
@@ -2,7 +2,7 @@
 = Introduction
 
 
-Kickstart and {ay} configuration files allow you to automate system installations for traditional clients.
+Kickstart and {ay} configuration files allow you to automate client system installations.
 This is especially useful if you need to install a large number of clients.
 
 For {sle} clients, use {ay}.
