--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -42,6 +42,8 @@ Content filters are global in your organization and can be shared between projec
 [NOTE]
 ====
 If your project already contains built sources, when you add an environment it will automatically populate with the existing content.
+Content will be drawn from the previous environment of the cycle if it had one.
+If there is no previous environment, it will use the latest available built version.
 ====
 
 
