--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -10,13 +10,13 @@
 [[quickstart.sect.kvm.settings]]
 == Virtual Machine Manager (virt-manager) Settings
 
-This chapter provides the required (KVM) settings for installation of {sle} Just Enough Operating System (JeOS) 12 as the base for {productname}.
+This chapter provides the required (KVM) settings for installation of {sle} Just Enough Operating System (JeOS) 15 as the base for {productname}.
 A kernel virtual machine (KVM) combined with Virtual Machine Manager (_virt-manager_) will be used as a sandbox for your first installation.
 
-.{suse}Virtualization Guide
+.{suse} Virtualization Guide
 [TIP]
 ====
-For more information on virtualization, see: https://www.suse.com/documentation/sles-12/singlehtml/book_virt/book_virt.html[SUSE Linux Enterprise Virtualization Guide]
+For more information on virtualization, see: https://www.suse.com/documentation/sles-15/singlehtml/book_virt/book_virt.html[SUSE Linux Enterprise Virtualization Guide]
 ====
 
 //This section needs revision its ugly and outdated.
@@ -52,7 +52,7 @@ For more information on virtualization, see: https://www.suse.com/documentation/
 Create three additional virtual disks required for the {productname} storage partitions.
 
 .Procedure: Creating the Required Partitions with KVM
-. Create a new virtual machine using the downloaded JeOS KVM image and select menu:Import existing disk image[] .
+. Create a new virtual machine using the downloaded JeOS KVM image and select menu:Import existing disk image[].
 . Configure RAM and number of CPUs (At least 4 GB RAM and 2 CPUs).
 . Name your KVM machine and select the menu:Customize configuration before install[] check box.
 . Select the btn:[Add Hardware] button and create three new virtual disks with the following specifications.
@@ -78,29 +78,52 @@ During the basic installation prompts you are asked to enter the root password.
 Select a strong password and then in the next message box btn:[Confirm root Password].
 ====
 
+
+
 [[jeos.susemgr.prep]]
 == Preparing JeOS for {productname}
 
 [[proc.jeos.susemgr.prep]]
 .Procedure: Preparing JeOS for {productname} Installation
-. Register with SCC:
+
+. Log in as `root`.
+
+// 4.0 workaround
+. Uninstall the `sles-release` package:
 +
 
 ----
-SUSEConnect -e<EMAIL_ADDRESS> -r<SUSE_MANAGER_CODE>
+rpm -e --nodeps sles-release
 ----
+
+. Register {productname} with SCC:
++
+
+----
+SUSEConnect -e<EMAIL_ADDRESS> -r<SUSE_MANAGER_CODE> \
+  -p SUSE-Manager-Server/<productnumber>/x86_64
+----
+
 . Add {productname} repositories:
 +
 
 ----
-SUSEConnect -p SUSE-Manager-Server/<productnumber>/x86_64 -r<SUSE_MANAGER_CODE>
+SUSEConnect -p sle-module-basesystem/15.1/x86_64
+SUSEConnect -p sle-module-python2/15.1/x86_64
+SUSEConnect -p sle-module-server-applications/15.1/x86_64
+SUSEConnect -p sle-module-web-scripting/15.1/x86_64
+SUSEConnect -p sle-module-suse-manager-server/<productnumber>/x86_64
 ----
-. Install [package]#yast2-storage# with all required dependencies (approx. 40 packages, 30 MB when installed).
+// ----
+// SUSEConnect -p SUSE-Manager-Server/<productnumber>/x86_64 -r<SUSE_MANAGER_CODE>
+// ----
+
+. Install [package]#yast2-storage-ng# with all required dependencies (approx. 40 packages, 30 MB when installed).
 This basic administration package is required for preparing storage partitions:
 +
 
 ----
-zypper in -t package yast2-storage
+zypper in -t package yast2-storage-ng
 ----
 . Partition and mount the virtual disks at the following locations using {yast} Partitioner ([command]``yast2 disk``).
 +
