--- a/modules/retail/pages/retail-formula-saltboot.adoc
+++ b/modules/retail/pages/retail-formula-saltboot.adoc
@@ -58,7 +58,7 @@ The Saltboot formula helps you with setting up special partition types.
 
 === BIOS grub Partition
 
-A BIOS grub partition is needed for local booting from a GPT disk on non-EFI machines.
+A BIOS grub partition is needed for local booting from a `GPT` disk on non-EFI machines.
 For more information, see https://en.wikipedia.org/wiki/BIOS_boot_partition.
 
 In the formula, enter the following options:
@@ -73,7 +73,7 @@ Leave the other fields empty.
 
 === EFI Partition
 
-An EFI partition is needed for local booting on EFI machines, [guimenu]``Partition Table Type`` must be GPT.
+An EFI partition is needed for local booting on EFI machines, [guimenu]``Partition Table Type`` must be `GPT`.
 For more information, see https://en.wikipedia.org/wiki/EFI_system_partition.
 
 In the formula, enter the following options:
