--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -3,10 +3,6 @@
 
 
 
-
-
-// This chapter needs a complete overhaul --LKB 2019-04-02
-
 [[quickstart.sect.kvm.settings]]
 == Virtual Machine Manager (virt-manager) Settings
 
@@ -19,7 +15,9 @@ A kernel virtual machine (KVM) combined with Virtual Machine Manager (_virt-mana
 For more information on virtualization, see: https://www.suse.com/documentation/sles-15/singlehtml/book_virt/book_virt.html[SUSE Linux Enterprise Virtualization Guide]
 ====
 
-//This section needs revision its ugly and outdated.
+// This section needs revision its still ugly (LKB, KE), but now updated (KE)
+// - 2019-06-19.
+
 Enter the following settings when creating a new virtual machine using *virt-manager*.
 In the following table replace _version_ with the actual product version string.
 
@@ -96,12 +94,12 @@ Select a strong password and then in the next message box btn:[Confirm root Pass
 rpm -e --nodeps sles-release
 ----
 
-. Register {productname} with SCC:
+. Register {productname} with SCC (for example, replace `<productnumber>` with `{productnumber}` and `<architecture>` with `x86_64`):
 +
 
 ----
 SUSEConnect -e<EMAIL_ADDRESS> -r<SUSE_MANAGER_CODE> \
-  -p SUSE-Manager-Server/<productnumber>/x86_64
+  -p SUSE-Manager-Server/<productnumber>/<architecture>
 ----
 
 . Add {productname} repositories:
