--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -147,7 +147,7 @@ zypper in -t package yast2-storage-ng
 | VirtIO Disk 4        | [path]``swap``           | 4{nbsp}GB    | swap
 |===
 
-. Exit the partitioner and install the {productname} pattern (approx. 730 packages, 1.4 GB when installed):
+. Exit the partitioner and install the {productname} pattern (approximately 730 packages, consuming 1.4 GB when installed):
 +
 
 ----
