--- a/modules/administration/pages/virtualization.adoc
+++ b/modules/administration/pages/virtualization.adoc
@@ -317,7 +317,7 @@ Apart from being able to serve as a host for {kvm} or {xen} guests, which are ma
 
 [IMPORTANT]
 ====
-Salt minions must be restarted after enabling the Virtualization Host entitlement in order for instant virtual machine changes to be reflected.
+Salt minions must be restarted after enabling the Virtualization Host entitlement in order to see virtual machine changes in {productname} instantly.
 ====
 
 [[sec.virtualization.autoinstall.req_vmhost.salt]]
