I'd prefer a formal list

--- a/modules/client-configuration/pages/client-config-overview.adoc
+++ b/modules/client-configuration/pages/client-config-overview.adoc
@@ -11,9 +11,11 @@ This guide discusses how to register and configure different clients, both manua
 == Compare Traditional and Salt Clients
 
 This table lists the availability of various features for traditional and Salt clients.
+The icons in this table indicate:
 
-In this table, icon:check[role="green"] indicates that the feature is available, and icon:times[role="danger"] indicates that it is not available.
-Fields marked as icon:question[role="gray"] are under consideration, and may or may not be made available at a later date.
+* icon:check[role="green"] the feature is available
+* icon:times[role="danger"] the feature is not available.
+* icon:question[role="gray"] the feature is under consideration, and may or may not be made available at a later date
 
 [cols="1,1,1,1", options="header"]
 .Features of Traditional and Salt Clients
