--- a/modules/installation/pages/install-intro.adoc
+++ b/modules/installation/pages/install-intro.adoc
@@ -14,6 +14,7 @@ Because {productname} allows you to manage large numbers of systems and automati
 
 {productname} can be used in conjunction with Red Hat Satellite Server and offers seamless management of both {sle} and {rhel} client systems.
 
+This is a demo!
 
 
 == Installing {productname}
