adjust version numbers https://github.com/SUSE/spacewalk/issues/7810

--- a/modules/retail/pages/retail-install-packages.adoc
+++ b/modules/retail/pages/retail-install-packages.adoc
@@ -7,7 +7,7 @@ If you have chosen not to use the Unified Installer, you can install {smr} manua
 
 == Install the {susemgr} server
 
-For instructions to install {susemgr}, see the https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-getting-started/html/book.suma.getting-started/quickstart.chapt.overview.requirements.html#quickstart.sect.introduction
+For instructions to install {susemgr}, see https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager/installation/install-intro.html.
 
 [WARNING]
 .Do Not Enable PXE Boot
@@ -22,8 +22,9 @@ This functionality will be installed later, after the initial setup.
 == Configure the {susemgr} server
 
 It is important that all required SUSE channels are available on your system and synchronized in order for {smr} to operate correctly.
-For more information on channel management, see https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-advanced-topics/html/book.suma.advanced.topics/suse.mgr.command.line.tools.html#syncing.suse.mgr.repositories.scc
+For more information on channel management, see https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager/administration/channel-management.html.
 
+// FIXME: check this listing. 2019-06-19, ke
 Channels required for {smr} functionality:
 ----
 - SLES 12 SP3 (SP4 in the future) as a base
@@ -42,8 +43,7 @@ Channels required for {smr} functionality:
 
 After you have synchronized the required SUSE channels, create channels for any custom software.
 Channels are used to provide custom software for OS image building.
-For more information on software channels, see https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-reference/html/book.suma.reference.manual/ref.webui.channels.html
-
+For more information on software channels, see https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager/reference/software/software-menu.html.
 
 
 
