--- a/modules/retail/pages/retail-migration-slepostosuma.adoc
+++ b/modules/retail/pages/retail-migration-slepostosuma.adoc
@@ -15,7 +15,8 @@ Importing and deploying the converted data can also be done in one step, or mult
 In this procedure, you create a single data dump in an XML file, convert it to YAML, and migrate it to the new infrastructure all at once.
 
 . Install a {susemgr} server {productnumber} (with the Retail pattern).
-For more information, see https://www.suse.com/documentation/suse-manager-for-retail-3-2/retail-getting-started/retail.chap.install.html.
+For more information, see https://www.suse.com/documentation/suse-manager-for-retail-4.
+// was:  https://www.suse.com/documentation/suse-manager-for-retail-3-2/retail-getting-started/retail.chap.install.html.
 
 . On the SLEPOS Admin server export all the data stored in LDAP to an XML file.
 Run this command as an administrator:
@@ -44,7 +45,7 @@ If there are duplicate MAC addresses, importing the YAML file will fail.
 [NOTE]
 ====
 {slepos} images will not be migrated. You must rebuild the images using the OS image building functionality.
-For more information about building images, see https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-advanced-topics/html/book.suma.advanced.topics/at.images.html#at.images.kiwi.
+For more information about building images, see https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager/administration/image-management.html.
 ====
 
 . Import the complete data (YAML) with:
@@ -71,6 +72,7 @@ After all the branches are migrated, shutdown and remove the old SLEPOS Admin Se
 In this procedure, you migrate the SLEPOS infrastructure and the branches one by one, first exporting and then importing.
 
 . Install a {susemgr} server {productnumber} (with the Retail pattern).
+// FIXME: update this URL when 4.0 is released
 For more information, see https://www.suse.com/documentation/suse-manager-for-retail-3-2/retail-getting-started/retail.chap.install.html.
 
 . On every branch server:
@@ -102,7 +104,7 @@ As long as there are duplicate MAC addresses, {susemgr} will refuse importing th
 [NOTE]
 ====
 {slepos} images will not be migrated. You must rebuild the images using the OS image building functionality.
-For more information about building images, see https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-advanced-topics/html/book.suma.advanced.topics/at.images.html#at.images.kiwi.
+For more information about building images, see https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager/administration/image-management.html.
 ====
 
 The data can be imported branch by branch.
