Updates per feedback

--- a/modules/client-configuration/pages/client-config-overview.adoc
+++ b/modules/client-configuration/pages/client-config-overview.adoc
@@ -23,7 +23,7 @@ The icons in this table indicate:
 | Feature               | Notes | Traditional               | Salt
 | Registration          |       | icon:check[role="green"]  | icon:check[role="green"]
 | Install Packages      |       | icon:check[role="green"]  | icon:check[role="green"]
-| Install Patches       |       | icon:check[role="green"]  | icon:check[role="green"]
+| Apply Patches         |       | icon:check[role="green"]  | icon:check[role="green"]
 | Remote Commands       |       | icon:check[role="green"]  | icon:check[role="green"]
 | System Package States |       | icon:times[role="danger"] | icon:check[role="green"]
 | System Custom States  |       | icon:times[role="danger"] | icon:check[role="green"]
@@ -31,16 +31,17 @@ The icons in this table indicate:
 | Organization Custom States |  | icon:times[role="danger"] | icon:check[role="green"]
 | System Set Manager    |       | icon:check[role="green"]  | icon:check[role="green"]
 | Service Pack Migration |      | icon:check[role="green"]  | icon:check[role="green"]
-| Virtual Host Management | Bootstrap installation support | icon:check[role="green"] | icon:check[role="green"] (read-only)
+| Virtual Host Management |     | icon:check[role="green"]  | icon:check[role="green"]
+| Virtual Guest Installation |  | icon:check[role="green"]  | icon:question[role="gray"]
 | System Redeployment | With Auto-installation | icon:check[role="green"] | icon:question[role="gray"]
 | Contact Methods | Between server and client | osad, rhnsd, ssh push | zeromq: Salt default salt-ssh
-| Red Hat Network Clients |     | icon:check[role="green"]  | icon:check[role="green"]
+| Red Hat Clients     |         | icon:check[role="green"]  | icon:check[role="green"]
 | Ubuntu Clients      |         | icon:times[role="danger"] | icon:check[role="green"]
 | SUSE Manager Proxy  |         | icon:check[role="green"]  | icon:check[role="green"]
 | Action Chains       |         | icon:check[role="green"]  | icon:check[role="green"]
 | Software Crash Reporting |    | icon:check[role="green"]  | icon:times[role="danger"]
 | Staging             |         | icon:check[role="green"]  | icon:check[role="green"]
-| Duplicate Package Reporting | Example: Multiple Versions of the Linux Kernel | icon:check[role="green"] | icon:check[role="green"]
+| Duplicate Package Reporting | | icon:check[role="green"] | icon:check[role="green"]
 | SCAP Auditing       |         | icon:check[role="green"]  | icon:check[role="green"]
 | Support for Multiple Organizations | | icon:check[role="green"] | icon:check[role="green"]
 | Package Verification |        | icon:check[role="green"]  | icon:question[role="gray"]
