--- a/modules/client-configuration/pages/client-config-overview.adoc
+++ b/modules/client-configuration/pages/client-config-overview.adoc
@@ -34,7 +34,7 @@ The icons in this table indicate:
 | Virtual Host Management |     | icon:check[role="green"]  | icon:check[role="green"]
 | Virtual Guest Installation |  | icon:check[role="green"]  | icon:question[role="gray"]
 | System Redeployment | With Auto-installation | icon:check[role="green"] | icon:question[role="gray"]
-| Contact Methods | Between server and client | osad, rhnsd, ssh push | zeromq: Salt default salt-ssh
+| Contact Methods | Between server and client | osad, rhnsd, ssh push | zeromq (Salt default), salt-ssh
 | Red Hat Clients     |         | icon:check[role="green"]  | icon:check[role="green"]
 | Ubuntu Clients      |         | icon:times[role="danger"] | icon:check[role="green"]
 | SUSE Manager Proxy  |         | icon:check[role="green"]  | icon:check[role="green"]
